# life

./: .gitignore  .gitmodules  =0.3.3  ABSOLUTE_FINAL_STATUS.md  ACTION_CARD.txt  AlphaFold_Analysis_Summary.md  CHECK_SPRINGER_REQUIREMENTS.md  CITATION.cff  COMPILE_PDF_OPTIONS.md  DO_THIS_NOW.txt  FINAL_PRE_SUBMISSION_VALIDATION.md  FINAL_SUBMISSION_CHECKLIST.md  GPU_VALIDATION_EXECUTIVE_SUMMARY.md  JAX_GPU_SETUP.md  LATEX_FIXES_APPLIED.md  MANUSCRIPT_CONTENTS_AND_NEXT_STEPS.md  MISSION_ACCOMPLISHED.txt  MISSION_COMPLETE.md  Makefile  NATURE_MANUSCRIPT_FORMATTING_GUIDE.md  PUBLICATION_PROGRESS_2026-05-05.md  PUBLICATION_READY_STATUS.md  PUBLICATION_STATUS.md  README.md  README_SUBMISSION.md  README_SUBMISSION_PACKAGE.md  START_HERE.txt  SUBMISSION_READY_FINAL.md  SUBMIT_NOW.md  SUBMIT_NOW_FINAL.md  Supplementary_Methods_Statistics.md  Supplementary_Statistics_Table.csv  TRULY_FINAL_STATUS.md  VALIDATION_CHECKLIST.md  VALIDATION_SUMMARY.md  ZENODO_SETUP_INSTRUCTIONS.md  add_new_candidates.py  alphafold_pipeline_v2.py  article.txt  article_full.txt  (+137 more)
.jules/: bolt.md  reflection.txt
VisionClaw/: README.md
af_data/: Q8NA72_pae.json
alphafold_analysis/: FIXES_APPLIED.md  PIPELINE_STATUS.md  UNIPROT_VERIFICATION_COMPLETE.md  analyze_bcc_structures.py  bcc_analysis_report.md  build_dataset.py  fetch_bcc_structures.py  fix_invalid_pdbs.py  investigate_not_found.py  refresh_corrected_proteins.py  run_biofold_cycle.py
analysis/: 02_validate_solvers.py
archive/: add_week_22_candidates.py  checklist_compliance.txt
biofold_workspace/: bolt_report.md  check_env.py
biology_research/: FINAL_SUBMISSION_READY.md
countercurvature/: MANUSCRIPT_COMPLETE.md  RESEARCH_REPORT_BCC.md  references.bib
data/: README.md  candidates_master.csv  datasets_registry.md  species_parameters.csv
docs/: ARCHIVIST_PLAN.md  CONTRIBUTING.md  DREAMER_INTEGRATION_PLAN.md  PROJECT_PLAN.md  README.md  SPINE_SUBMISSION_TRACKER.md  candidate_registry.md  cli.md  countercurvature_overview.md  experiment_registry.md  figures.md  hypothesis_register.md  index.md  inventory.md  jules_prompts_thermodynamic_cost.md  manuscript_outline.md  pending_work.md  phase1_phase2_fresh_analysis.md  progress_update_2026-02-28.md  progress_update_2026-03-01.md  progress_update_2026-03-04.md  progress_update_2026-03-05.md  progress_update_2026-03-06.md  progress_update_2026-03-07.md  progress_update_2026-03-08.md  progress_update_2026-03-09.md  progress_update_2026-03-10.md  progress_update_2026-03-11.md  progress_update_2026-03-12.md  progress_update_2026-03-13.md  progress_update_2026-03-14.md  progress_update_2026-03-15.md  (+40 more)
envs/: README.md
(+2619 files in other folders)
