[tool.poetry]
name = "spinalmodes"
version = "0.3.0"
description = "Spinal counter-curvature and Information-Elasticity Coupling (IEC) model for biomechanical analysis"
authors = ["Dr. Sayuj Krishnan <sayuj@example.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
packages = [
    {include = "spinalmodes", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
typer = "^0.9.0"
pydantic = "^2.0.0"
pandas = "^2.0.0"

# Optional dependencies
pyelastica = { version = ">=0.3.3", optional = true }
biopython = { version = ">=1.85", optional = true }
lifelines = { version = ">=0.27.8", optional = true }
seaborn = { version = ">=0.13.0", optional = true }
transformers = { version = ">=4.37.0", optional = true }
torch = { version = ">=2.0.0", optional = true }
accelerate = { version = ">=0.25.0", optional = true }
langchain = { version = ">=0.1.0", optional = true }
chromadb = { version = ">=0.4.0", optional = true }
pyyaml = { version = ">=6.0", optional = true }


[tool.poetry.extras]
mechanics = ["pyelastica"]
bio = ["biopython"]
analysis = ["lifelines", "seaborn"]
manuscript = ["transformers", "torch", "accelerate", "langchain", "chromadb", "pyyaml"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-cov = "^4.1.0"
black = ">=24.8"
ruff = ">=0.6"
mypy = ">=1.11"
mkdocs = "^1.5.0"
mkdocs-material = "^9.2.0"

[tool.poetry.scripts]
spinalmodes = "spinalmodes.cli:app"
spinalmodes-validate = "spinalmodes.cli:cmd_validate"
spinalmodes-figures = "spinalmodes.cli:cmd_figures"
spinalmodes-paper = "spinalmodes.cli:cmd_paper"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=spinalmodes --cov-report=term-missing"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spinalmodes*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
